--- a/resources/lang/en-GB/messages.po
+++ b/resources/lang/en-GB/messages.po
@@ -1,11 +1,11 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Pedigree chart\n"
-"POT-Creation-Date: 2021-09-29 11:37+0100\n"
-"PO-Revision-Date: 2021-09-29 11:38+0100\n"
-"Last-Translator: Rico Sonntag <mail@ricosonntag.de>\n"
+"POT-Creation-Date: 2021-09-29 11:38+0100\n"
+"PO-Revision-Date: 2021-09-29 11:43+0100\n"
+"Last-Translator: David Drury <david@drury.me.uk>\n"
 "Language-Team: \n"
-"Language: en_US\n"
+"Language: en_GB\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -31,7 +31,7 @@ msgstr ""
 
 #: src/Module.php:231
 msgid "Use Ctrl + scroll to zoom in the view"
-msgstr ""
+msgstr "Use Ctrl + Scroll wheel to zoom the chart"
 
 #: src/Module.php:232
 msgid "Move the view with two fingers"
@@ -101,7 +101,7 @@ msgstr ""
 
 #: resources/views/modules/pedigree-chart/page.phtml:129
 msgid "Re center"
-msgstr ""
+msgstr "Re-centre"
 
 #: resources/views/modules/pedigree-chart/page.phtml:134
 msgid "Export as PNG"
