--- a/resources/lang/de/messages.po
+++ b/resources/lang/de/messages.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Pedigree chart\n"
 "POT-Creation-Date: 2021-09-30 10:56+0100\n"
-"PO-Revision-Date: 2021-09-30 10:56+0100\n"
+"PO-Revision-Date: 2021-10-02 14:04+0200\n"
 "Last-Translator: Rico Sonntag <mail@ricosonntag.de>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -92,11 +92,11 @@ msgstr ""
 
 #: resources/views/modules/pedigree-chart/page.phtml:117
 msgid "Show more options"
-msgstr ""
+msgstr "Zeige weitere Optionen"
 
 #: resources/views/modules/pedigree-chart/page.phtml:118
 msgid "Hide more options"
-msgstr ""
+msgstr "Verstecke weitere Optionen"
 
 #: resources/views/modules/pedigree-chart/page.phtml:123
 msgid "view"
