--- a/resources/lang/nb/messages.po
+++ b/resources/lang/nb/messages.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Pedigree chart\n"
-"POT-Creation-Date: 2024-03-20 13:49+0100\n"
-"PO-Revision-Date: 2024-04-06 07:52+0200\n"
+"POT-Creation-Date: 2024-10-23 18:34+0200\n"
+"PO-Revision-Date: 2024-10-23 18:34+0200\n"
 "Last-Translator: Rico Sonntag <mail@ricosonntag.de>\n"
 "Language-Team: \n"
 "Language: nb\n"
@@ -10,7 +10,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 3.4.2\n"
+"X-Generator: Poedit 3.5\n"
 "X-Poedit-Basepath: ../../..\n"
 "X-Poedit-KeywordsList: translate\n"
 "X-Poedit-SearchPath-0: src\n"
@@ -71,6 +71,26 @@ msgstr "Død"
 #, php-format
 msgid "The preferences for the module “%s” have been updated."
 msgstr "Innstillingene for modulen “%s” har blitt oppdatert."
+
+#: resources/views/modules/components/buttonbar/center-button.phtml:18
+msgid "Re center"
+msgstr "Tibakestill"
+
+#: resources/views/modules/components/buttonbar/fullscreen-button.phtml:18
+msgid "Switch between full screen mode and normal view"
+msgstr ""
+
+#: resources/views/modules/components/buttonbar/help-button.phtml:17
+msgid "Show help"
+msgstr ""
+
+#: resources/views/modules/components/buttonbar/png-export-button.phtml:18
+msgid "Export as PNG"
+msgstr "Eksporter som PNG"
+
+#: resources/views/modules/components/buttonbar/svg-export-button.phtml:18
+msgid "Export as SVG"
+msgstr "Eksporter som SVG"
 
 #: resources/views/modules/pedigree-chart/config.phtml:25
 msgid "Control panel"
@@ -136,26 +156,14 @@ msgstr "Orientering"
 msgid "Individual"
 msgstr "Person"
 
-#: resources/views/modules/pedigree-chart/page.phtml:71
-msgid "Show more options"
-msgstr "Vis flere valg"
-
-#: resources/views/modules/pedigree-chart/page.phtml:72
-msgid "Hide more options"
-msgstr "Skjul flere valg"
-
-#: resources/views/modules/pedigree-chart/page.phtml:77
+#: resources/views/modules/pedigree-chart/page.phtml:64
 msgid "view"
 msgstr "vis"
 
-#: resources/views/modules/pedigree-chart/page.phtml:83
-msgid "Re center"
-msgstr "Tibakestill"
+#: resources/views/modules/pedigree-chart/page.phtml:75
+msgid "Show more options"
+msgstr "Vis flere valg"
 
-#: resources/views/modules/pedigree-chart/page.phtml:88
-msgid "Export as PNG"
-msgstr "Eksporter som PNG"
-
-#: resources/views/modules/pedigree-chart/page.phtml:91
-msgid "Export as SVG"
-msgstr "Eksporter som SVG"
+#: resources/views/modules/pedigree-chart/page.phtml:76
+msgid "Hide more options"
+msgstr "Skjul flere valg"
