--- a/resources/lang/ru/messages.po
+++ b/resources/lang/ru/messages.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Pedigree chart\n"
-"POT-Creation-Date: 2024-03-20 13:49+0100\n"
-"PO-Revision-Date: 2024-03-20 13:49+0100\n"
+"POT-Creation-Date: 2024-10-23 18:34+0200\n"
+"PO-Revision-Date: 2024-10-23 18:34+0200\n"
 "Last-Translator: Rico Sonntag <mail@ricosonntag.de>\n"
 "Language-Team: \n"
 "Language: ru\n"
@@ -11,7 +11,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
 "n%10<=4 && (n%100<12 || n%100>14) ? 1 : 2);\n"
-"X-Generator: Poedit 3.4.2\n"
+"X-Generator: Poedit 3.5\n"
 "X-Poedit-Basepath: ../../..\n"
 "X-Poedit-KeywordsList: translate\n"
 "X-Poedit-SearchPath-0: src\n"
@@ -73,6 +73,26 @@ msgstr "Умерший"
 msgid "The preferences for the module “%s” have been updated."
 msgstr ""
 
+#: resources/views/modules/components/buttonbar/center-button.phtml:18
+msgid "Re center"
+msgstr "Центрировать"
+
+#: resources/views/modules/components/buttonbar/fullscreen-button.phtml:18
+msgid "Switch between full screen mode and normal view"
+msgstr ""
+
+#: resources/views/modules/components/buttonbar/help-button.phtml:17
+msgid "Show help"
+msgstr ""
+
+#: resources/views/modules/components/buttonbar/png-export-button.phtml:18
+msgid "Export as PNG"
+msgstr "Экспорт в PNG"
+
+#: resources/views/modules/components/buttonbar/svg-export-button.phtml:18
+msgid "Export as SVG"
+msgstr "Экспорт в SVG"
+
 #: resources/views/modules/pedigree-chart/config.phtml:25
 msgid "Control panel"
 msgstr ""
@@ -131,26 +151,14 @@ msgstr "Ориентация"
 msgid "Individual"
 msgstr "Человек"
 
-#: resources/views/modules/pedigree-chart/page.phtml:71
-msgid "Show more options"
-msgstr "Больше опций"
-
-#: resources/views/modules/pedigree-chart/page.phtml:72
-msgid "Hide more options"
-msgstr "Меньше опций"
-
-#: resources/views/modules/pedigree-chart/page.phtml:77
+#: resources/views/modules/pedigree-chart/page.phtml:64
 msgid "view"
 msgstr "Обновить"
 
-#: resources/views/modules/pedigree-chart/page.phtml:83
-msgid "Re center"
-msgstr "Центрировать"
+#: resources/views/modules/pedigree-chart/page.phtml:75
+msgid "Show more options"
+msgstr "Больше опций"
 
-#: resources/views/modules/pedigree-chart/page.phtml:88
-msgid "Export as PNG"
-msgstr "Экспорт в PNG"
-
-#: resources/views/modules/pedigree-chart/page.phtml:91
-msgid "Export as SVG"
-msgstr "Экспорт в SVG"
+#: resources/views/modules/pedigree-chart/page.phtml:76
+msgid "Hide more options"
+msgstr "Меньше опций"
