--- a/resources/lang/is/messages.po
+++ b/resources/lang/is/messages.po
@@ -78,11 +78,11 @@ msgstr "Endurmiðja"
 
 #: resources/views/modules/components/buttonbar/fullscreen-button.phtml:18
 msgid "Switch between full screen mode and normal view"
-msgstr ""
+msgstr "Skiptu á milli fullsskjás og venjulegs skjás"
 
 #: resources/views/modules/components/buttonbar/help-button.phtml:17
 msgid "Show help"
-msgstr ""
+msgstr "Sýna hjálp"
 
 #: resources/views/modules/components/buttonbar/png-export-button.phtml:18
 msgid "Export as PNG"
