--- a/resources/lang/de/messages.po
+++ b/resources/lang/de/messages.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Pedigree chart\n"
-"POT-Creation-Date: 2024-10-23 18:34+0200\n"
-"PO-Revision-Date: 2024-10-23 18:35+0200\n"
+"POT-Creation-Date: 2024-12-22 12:46+0100\n"
+"PO-Revision-Date: 2024-12-22 12:47+0100\n"
 "Last-Translator: Rico Sonntag <mail@ricosonntag.de>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -67,7 +67,7 @@ msgstr "Gestorben: %s"
 msgid "Deceased"
 msgstr "Verstorben"
 
-#: src/Traits/ModuleConfigTrait.php:83
+#: src/Traits/ModuleConfigTrait.php:91
 #, php-format
 msgid "The preferences for the module “%s” have been updated."
 msgstr ""
@@ -101,12 +101,24 @@ msgid "Modules"
 msgstr ""
 
 #: resources/views/modules/pedigree-chart/config.phtml:44
-msgid "save"
-msgstr ""
+msgid "General"
+msgstr "Allgemein"
 
-#: resources/views/modules/pedigree-chart/config.phtml:49
+#: resources/views/modules/pedigree-chart/config.phtml:50
+msgid "Hide the SVG export button"
+msgstr "Die Schaltfläche für den SVG-Export ausblenden"
+
+#: resources/views/modules/pedigree-chart/config.phtml:60
+msgid "Hide the PNG export button"
+msgstr "Die Schaltfläche für den PNG-Export ausblenden"
+
+#: resources/views/modules/pedigree-chart/config.phtml:73
+msgid "save"
+msgstr "Speichern"
+
+#: resources/views/modules/pedigree-chart/config.phtml:78
 msgid "cancel"
-msgstr ""
+msgstr "Abbrechen"
 
 #: resources/views/modules/pedigree-chart/form/generations.phtml:22
 msgid "Generations"
